--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+# port ?? : 8080
+server.port = 8080
 
+# application name : spring-hbrg
+application.name = spring-hbrg
+
+# MySQL ?? ??
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://222.119.100.81:3382/hbrg?serverTimezone=UTC
+spring.datasource.username=hbrg
+spring.datasource.password=hbrg1234
+
+# ???? ?? ?? ??
+spring.jpa.properties.hibernate.format_sql=true
+
+# ??? ???? ???? ??? ???? ??
+logging.level.org.hibernate.type.desriptor.sql=trace
+
+# ?? ???? ???(???) ?? ??, ?????? ??? ????
+# none : ???? ??
+# create : ?? ??? ?? ? ??? ??
+# create-drop : ?? ??? ?? ? ??? ??. ?? ?? ??? ??
+# update : ??? ??? ??
+# validate : ???? ??? ?? ?? ??
+spring.jpa.hibernate.ddl-auto=create
+
+# SQL? ?? SQL? DBMS ???? ???? SQL? ??
+# ? ?? ???? ?? SQL? ??(Dialect)?? ?
+# MySQL? JPA?? MySQL8Dialect ????? ???
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
