--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,17 @@ application.name = spring-hbrg
 # MySQL \uC5F0\uACB0 \uC124\uC815
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://222.119.100.81:3382/hbrg?serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://192.168.111.40:3306/hbrg?serverTimezone=UTC
 spring.datasource.username=hbrg
 spring.datasource.password=hbrg1234
+#spring.datasource.username=root
+#spring.datasource.password=1234
+
 
 # \uC2E4\uD589\uB418\uB294 \uCFFC\uB9AC \uCF58\uC194 \uCD9C\uB825
+spring.jpa.properties.hibernate.show_sql=true
+
+# \uCF58\uC194\uCC3D\uC5D0 \uCD9C\uB825\uB418\uB294 \uCFFC\uB9AC\uB97C \uAC00\uB3C5\uC131\uC774 \uC88B\uAC8C \uD3EC\uB9F7\uD305
 spring.jpa.properties.hibernate.format_sql=true
 
 # \uCFFC\uB9AC\uC5D0 \uBB3C\uC74C\uD45C\uB85C \uCD9C\uB825\uB418\uB294 \uBC14\uC778\uB4DC \uD30C\uB77C\uBBF8\uD130 \uCD9C\uB825
