--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,14 +7,14 @@ application.name = spring-hbrg
 # MySQL \uC5F0\uACB0 \uC124\uC815
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://222.119.100.81:3382/hbrg?serverTimezone=UTC
-#spring.datasource.url=jdbc:mysql://192.168.111.40:3306/hbrg?serverTimezone=UTC
 spring.datasource.username=hbrg
 spring.datasource.password=hbrg1234
+
+#spring.datasource.url=jdbc:mysql://192.168.111.40:3306/hbrg?serverTimezone=UTC
 #spring.datasource.username=root
 #spring.datasource.password=1234
 
-
-# \uC2E4\uD589\uB418\uB294 \uCFFC\uB9AC \uCF58\uC194 \uCD9C\uB825
+# \uC2E4\uD589\uB418\uB294 \uCFFC\uB9AC \uCF58\uC194 \uCD9C\uB825(\uC5C6\uC73C\uBA74 \uC2E4\uD589 \uC548\uB428)
 spring.jpa.properties.hibernate.show_sql=true
 
 # \uCF58\uC194\uCC3D\uC5D0 \uCD9C\uB825\uB418\uB294 \uCFFC\uB9AC\uB97C \uAC00\uB3C5\uC131\uC774 \uC88B\uAC8C \uD3EC\uB9F7\uD305
@@ -29,7 +29,6 @@ logging.level.org.hibernate.type.desriptor.sql=trace
 # create-drop : \uAE30\uC874 \uD14C\uC774\uBE14 \uC0AD\uC81C \uD6C4 \uD14C\uC774\uBE14 \uC0DD\uC131. \uC885\uB8CC \uC2DC\uC810 \uD14C\uC774\uBE14 \uC0AD\uC81C
 # update : \uBCC0\uACBD\uB41C \uC2A4\uD0A4\uB9C8 \uC801\uC6A9
 # validate : \uC5D4\uD2F0\uD2F0\uC640 \uD14C\uC774\uBE14 \uC815\uC0C1 \uB9E4\uD551 \uD655\uC778
-
 spring.jpa.hibernate.ddl-auto=create
 
 # SQL\uC740 \uD45C\uC900 SQL\uACFC DBMS \uBCA4\uB354\uC5D0\uC11C \uC81C\uACF5\uD558\uB290 SQL\uC774 \uC874\uC7AC
