--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # \uCFFC\uB9AC\uC5D0 \uBB3C\uC74C\uD45C\uB85C \uCD9C\uB825\uB418\uB294 \uBC14\uC778\uB4DC \uD30C\uB77C\uBBF8\uD130 \uCD9C\uB825
-logging.level.org.hibernate.type.desriptor.sql=trace
+logging.level.org.hibernate.type.descriptor.sql=trace
 
 # \uC11C\uBC84 \uC7AC\uC2E4\uD589\uC2DC \uD14C\uC774\uBE14(\uC5D4\uD2F0\uD2F0) \uACC4\uC18D \uC0DD\uC131, \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uCD08\uAE30\uD654 \uC804\uB7B5\uC124\uC815
 # none : \uC0AC\uC6A9\uD558\uC9C0 \uC54A\uC74C
@@ -27,6 +27,12 @@ logging.level.org.hibernate.type.desriptor.sql=trace
 # validate : \uC5D4\uD2F0\uD2F0\uC640 \uD14C\uC774\uBE14 \uC815\uC0C1 \uB9E4\uD551 \uD655\uC778
 
 spring.jpa.hibernate.ddl-auto=create
+
+#Live Reload \uAE30\uB2A5 \uD65C\uC131\uD654
+spring.devtools.livereload.enabled=true
+
+#Thymeleaf cache \uC0AC\uC6A9\uC911\uC9C0
+spring.thymeleaf.cache=false
 
 # SQL\uC740 \uD45C\uC900 SQL\uACFC DBMS \uBCA4\uB354\uC5D0\uC11C \uC81C\uACF5\uD558\uB290 SQL\uC774 \uC874\uC7AC
 # \uAC01 \uACF5\uAE09 \uC5C5\uCCB4\uC5D0\uC11C \uB9CC\uB4E0 SQL\uC744 \uBC29\uC5B8(Dialect)\uB77C\uACE0 \uD568
