--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>RELEASE</version>
+			<version>7.4.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
