--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 # update : \uBCC0\uACBD\uB41C \uC2A4\uD0A4\uB9C8 \uC801\uC6A9
 # validate : \uC5D4\uD2F0\uD2F0\uC640 \uD14C\uC774\uBE14 \uC815\uC0C1 \uB9E4\uD551 \uD655\uC778
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 
 #Live Reload \uAE30\uB2A5 \uD65C\uC131\uD654
 spring.devtools.livereload.enabled=true
