--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,17 @@ application.name = spring-hbrg
 
 # MySQL \uC5F0\uACB0 \uC124\uC815
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://222.119.100.81:3382/hbrg?serverTimezone=UTC
-spring.datasource.username=hbrg
-spring.datasource.password=hbrg1234
+#spring.datasource.url=jdbc:mysql://222.119.100.81:3382/hbrg?serverTimezone=UTC
+#spring.datasource.username=hbrg
+#spring.datasource.password=hbrg1234
 
 #spring.datasource.url=jdbc:mysql://192.168.111.40:3306/hbrg?serverTimezone=UTC
 #spring.datasource.username=root
 #spring.datasource.password=1234
+
+spring.datasource.url=jdbc:mysql://localhost:3306/hbrg?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
 
 # \uC2E4\uD589\uB418\uB294 \uCFFC\uB9AC \uCF58\uC194 \uCD9C\uB825(\uC5C6\uC73C\uBA74 \uC2E4\uD589 \uC548\uB428)
 spring.jpa.properties.hibernate.show_sql=true
@@ -35,3 +39,17 @@ spring.jpa.hibernate.ddl-auto=create
 # \uAC01 \uACF5\uAE09 \uC5C5\uCCB4\uC5D0\uC11C \uB9CC\uB4E0 SQL\uC744 \uBC29\uC5B8(Dialect)\uB77C\uACE0 \uD568
 # MySQL\uC740 JPA\uC5D0\uC11C MySQL8Dialect \uC0AC\uC6A9\uD558\uB77C\uACE0 \uC54C\uB824\uC90C
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+
+#\uD30C\uC77C \uD55C \uAC1C\uB2F9 \uCD5C\uB300 \uC0AC\uC774\uC988
+spring.servlet.multipart.maxFileSize=20MB
+
+#\uC694\uCCAD\uB2F9 \uCD5C\uB300 \uD30C\uC77C \uD06C\uAE30
+spring.servlet.multipart.maxRequestSize=100MB
+
+#\uC0C1\uD488 \uC774\uBBF8\uC9C0 \uC5C5\uB85C\uB4DC \uACBD\uB85C
+itemImgLocation=C:/shop/item
+
+#\uB9AC\uC18C\uC2A4 \uC5C5\uB85C\uB4DC \uACBD\uB85C
+uploadPath=file:///C:shop/
+
