23/04/14 16:19 로그인 폼 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # port \uBC88\uD638 : 8080
-server.port = 8080
+server.port = 9091
 
 # application name : spring-hbrg
 application.name = spring-hbrg
@@ -40,6 +40,12 @@ spring.jpa.hibernate.ddl-auto=create
 # MySQL\uC740 JPA\uC5D0\uC11C MySQL8Dialect \uC0AC\uC6A9\uD558\uB77C\uACE0 \uC54C\uB824\uC90C
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+
+#Live Reload
+spring.devtools.livereload.enabled = true
+
+#Thymeleaf cache \uC0AC\uC6A9 \uC911\uC9C0
+spring.thymeleaf.cache = false
 
 #\uD30C\uC77C \uD55C \uAC1C\uB2F9 \uCD5C\uB300 \uC0AC\uC774\uC988
 spring.servlet.multipart.maxFileSize=20MB
