프로퍼티 내부 서버에서 구동
18:22

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,13 @@ application.name = spring-hbrg
 
 # MySQL \uC5F0\uACB0 \uC124\uC815
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://222.119.100.81:3382/hbrg?serverTimezone=UTC
-spring.datasource.username=hbrg
-spring.datasource.password=hbrg1234
+#spring.datasource.url=jdbc:mysql://222.119.100.81:3382/hbrg?serverTimezone=UTC
+#spring.datasource.username=hbrg
+#spring.datasource.password=hbrg1234
 
-#spring.datasource.url=jdbc:mysql://192.168.111.40:3306/hbrg?serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://192.168.111.40:3306/hbrg?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/hbrg?serverTimezone=UTC
 #spring.datasource.username=root
