--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,17 +6,17 @@ application.name = spring-hbrg
 
 # MySQL \uC5F0\uACB0 \uC124\uC815
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://222.119.100.81:3382/hbrg?serverTimezone=UTC
-spring.datasource.username=hbrg
-spring.datasource.password=hbrg1234
+#spring.datasource.url=jdbc:mysql://222.119.100.81:3382/hbrg?serverTimezone=UTC
+#spring.datasource.username=hbrg
+#spring.datasource.password=hbrg1234
 
 #spring.datasource.url=jdbc:mysql://192.168.111.40:3306/hbrg?serverTimezone=UTC
 #spring.datasource.username=root
 #spring.datasource.password=1234
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/hbrg?serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://localhost:3306/hbrg?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
 
 # \uC2E4\uD589\uB418\uB294 \uCFFC\uB9AC \uCF58\uC194 \uCD9C\uB825(\uC5C6\uC73C\uBA74 \uC2E4\uD589 \uC548\uB428)
 spring.jpa.properties.hibernate.show_sql=true
@@ -61,3 +61,6 @@ uploadPath=file:///C:shop/
 
 
 spring.main.allow-bean-definition-overriding = true
+
+
+cos.key = hbrg1234
