--- a/pom.xml
+++ b/pom.xml
@@ -133,8 +133,13 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.5.0.RELEASE</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 
 	<build>
